--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "multi-select-areas-image",
+  "name": "@hy0kl/multi-select-areas-image",
   "description": "multi select areas image transplant from jquery.areaSelect.js",
   "version": "1.0.0",
   "author": "yangyj <hy0kle@gmail.com>",
